space-display.c now reads display data from global memory shared across threads.
Sockets are managed in a separate thread that receives messages and updates display info.
Data access between threads is protected by a mutex.

--- a/Part B/Makefile
+++ b/Part B/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -I src
-LDFLAGS = -lncurses -lzmq
+LDFLAGS = -lncurses -lzmq -lpthread
 
 # Directories
 ASTRONAUT_CLIENT_DIR = Astronaut-app
