Implementation of astronaut-display-client. Refactor of astronaut-client ans client-logic.c to work
Fix bug where any unhandled key would reach a deadlock

--- a/Part B/Makefile
+++ b/Part B/Makefile
@@ -4,26 +4,32 @@ LDFLAGS = -lncurses -lzmq -lpthread
 
 # Directories
 ASTRONAUT_CLIENT_DIR = Astronaut-app
+ASTRONAUT_DISPLAY_CLIENT_DIR = Astronaut-Display-app
 GAME_SERVER_DIR = Game-Server-app
 OUTER_SPACE_DISPLAY_DIR = Outer-Space-Display-app
 SRC_DIR = src
 
 # Source files
 ASTRONAUT_CLIENT_SRCS = $(ASTRONAUT_CLIENT_DIR)/astronaut-client.c
+ASTRONAUT_DISPLAY_CLIENT_SRCS = $(ASTRONAUT_DISPLAY_CLIENT_DIR)/astronaut-display-client.c
 GAME_SERVER_SRCS = $(GAME_SERVER_DIR)/game-server.c
 OUTER_SPACE_DISPLAY_SRCS = $(OUTER_SPACE_DISPLAY_DIR)/outer-space-display.c
 COMMON_SRCS = $(SRC_DIR)/game-logic.c $(SRC_DIR)/space-display.c $(SRC_DIR)/client-logic.c
 
 # Object files
 ASTRONAUT_CLIENT_OBJS = $(ASTRONAUT_CLIENT_SRCS:.c=.o)
+ASTRONAUT_DISPLAY_CLIENT_OBJS = $(ASTRONAUT_DISPLAY_CLIENT_SRCS:.c=.o)
 GAME_SERVER_OBJS = $(GAME_SERVER_SRCS:.c=.o)
 OUTER_SPACE_DISPLAY_OBJS = $(OUTER_SPACE_DISPLAY_SRCS:.c=.o)
 COMMON_OBJS = $(COMMON_SRCS:.c=.o)
 
 # Targets
-all: astronaut-client game-server outer-space-display
+all: astronaut-client astronaut-display-client game-server outer-space-display
 
 astronaut-client: $(ASTRONAUT_CLIENT_OBJS) $(COMMON_OBJS)
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+astronaut-display-client: $(ASTRONAUT_DISPLAY_CLIENT_OBJS) $(COMMON_OBJS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 game-server: $(GAME_SERVER_OBJS) $(COMMON_OBJS)
@@ -33,7 +39,7 @@ outer-space-display: $(OUTER_SPACE_DISPLAY_OBJS) $(COMMON_OBJS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 clean:
-	rm -f $(ASTRONAUT_CLIENT_OBJS) $(GAME_SERVER_OBJS) $(OUTER_SPACE_DISPLAY_OBJS) $(COMMON_OBJS) astronaut-client game-server outer-space-display
+	rm -f $(ASTRONAUT_CLIENT_OBJS) $(GAME_SERVER_OBJS) $(OUTER_SPACE_DISPLAY_OBJS) $(COMMON_OBJS) astronaut-client astronaut-display-client game-server outer-space-display
 
 .PHONY: all clean
 
@@ -51,7 +57,7 @@ run: $(TARGETS)
 	@echo "Start game components manually in separate terminals:"
 	@echo "1. ./game-server"
 	@echo "2. ./outer-space-display"
-	@echo "3. Multiple ./astronaut-client instances"
+	@echo "3. Multiple ./astronaut-client or ./astronaut-display-client instances"
 
 # Help target
 help:
