Implemented protobuff with python file for displaying the scores.

--- a/Part B/Makefile
+++ b/Part B/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -I src
-LDFLAGS = -lncurses -lzmq -lpthread
+LDFLAGS = -lncurses -lzmq -lpthread -lprotobuf-c
 
 # Directories
 ASTRONAUT_CLIENT_DIR = Astronaut-app
@@ -14,7 +14,7 @@ ASTRONAUT_CLIENT_SRCS = $(ASTRONAUT_CLIENT_DIR)/astronaut-client.c
 ASTRONAUT_DISPLAY_CLIENT_SRCS = $(ASTRONAUT_DISPLAY_CLIENT_DIR)/astronaut-display-client.c
 GAME_SERVER_SRCS = $(GAME_SERVER_DIR)/game-server.c
 OUTER_SPACE_DISPLAY_SRCS = $(OUTER_SPACE_DISPLAY_DIR)/outer-space-display.c
-COMMON_SRCS = $(SRC_DIR)/game-logic.c $(SRC_DIR)/space-display.c $(SRC_DIR)/client-logic.c
+COMMON_SRCS = $(SRC_DIR)/game-logic.c $(SRC_DIR)/space-display.c $(SRC_DIR)/client-logic.c $(SRC_DIR)/scores.pb-c.c
 
 # Object files
 ASTRONAUT_CLIENT_OBJS = $(ASTRONAUT_CLIENT_SRCS:.c=.o)
